# arbitrage-mev-bot

./: .env.example  .gitignore  README.md
contracts/: FlashTipping.sol  MakerDAOMintWrapper.sol  TriangularArbExecutorV3.sol  UniswapV4Executor.sol  hardhat.config.ts
deploy/: 001_deploy_contracts.ts
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/components/: ArbDashboard.tsx  LiquidityBubbleMap.tsx  Mempool3DVisualizer.tsx  WalletConnector.tsx
frontend/pages/: index.tsx
frontend/services/: wsClient.ts
frontend/styles/: globals.css
rust-engine/: Cargo.toml
rust-engine/src/: bundler.rs  cex_hedger.rs  config.rs  listener.rs  main.rs  math.rs  simulator.rs  solver.rs  types.rs  ws_server.rs
