[package]
name = "arbitrage-rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = "14"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
rayon = "1.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
num-traits = "0.2"
hex = "0.4"
async-trait = "0.1"
thiserror = "1.0"
url = "2.5"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
